--- a/spring-cloud/pom.xml
+++ b/spring-cloud/pom.xml
@@ -18,6 +18,8 @@
         <module>micro-service-cloud-provider-dept-8002</module>
         <module>micro-service-cloud-provider-dept-8003</module>
         <module>micro-service-cloud-consumer-dept-feign</module>
+        <module>micro-service-cloud-provider-dept-hystrix-8004</module>
+        <module>micro-service-cloud-consumer-dept-hystrix-dashboard-9002</module>
     </modules>
 
     <parent>
